crates/bevy_ecs/compile_fail/tests/system_params.rs
fn main() -> compile_fail_utils::ui_test::Result<()> {
    compile_fail_utils::test("ecs_system_params", "tests/system_params")
}
